changed input placeholder text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div>
     <span>Very</span>
     <span>+</span>  
-    <input type="text" maxlength="15" size="15" autofocus placeholder="some good word" id="myInput" onkeydown="search(this)">
+    <input type="text" maxlength="15" size="15" autofocus placeholder="some adjective" id="myInput" onkeydown="search(this)">
   <button type="button" onclick="getBetterWord();">=</button>
     <span id="betterWord" />
   </div>
