--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css"/>
 </head>
 <body>
-    <script type="module" src="veryBetter.js" defer></script>
+    <script type="module" src="veryBetter.js"></script>
   <div>
     <span>Very</span>
     <span>+</span>  
