--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div>
     <span>Very</span>
     <span>+</span>  
-    <input type="text" maxlength="15" size="15" autofocus placeholder="some adjective" id="myInput" onkeydown="search(this)">
-  <button type="button" onclick="getBetterWord();">=</button>
+    <input type="text" maxlength="15" size="15" autofocus placeholder="some adjective" id="myInput">
+  <button type="button" id="getBetterButton">=</button>
     <span id="betterWord" />
   </div>
     <div id="noResults" />
